WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47571
[Qt] AC rendering bugs
https://bugs.webkit.org/show_bug.cgi?id=47571
Summary
[Qt] AC rendering bugs
Girish Ramakrishnan
Reported
2010-10-12 22:01:35 PDT
Bugs in Qt's AC implementation 1. When Scrolling the view, the items don't move correctly. This is reproducible using
http://webkit.org/blog-files/pulse.html
. Just make the view small enough and scroll vertically. The div gets clipped. 2. For AC/plugins (see 35524), the plugin layer moves incorrectly when scrolling. 3. When clicking on the plugin, the plugin moves/increases in size.
Attachments
Patch for the scroll issue
(3.21 KB, patch)
2010-10-18 07:00 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch: second rendering bug (clicking a plugin)
(4.72 KB, patch)
2010-10-18 07:09 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2010-10-18 07:00:51 PDT
Created
attachment 71030
[details]
Patch for the scroll issue
Noam Rosenthal
Comment 2
2010-10-18 07:09:03 PDT
Created
attachment 71031
[details]
Patch: second rendering bug (clicking a plugin)
Andreas Kling
Comment 3
2010-10-18 07:51:28 PDT
Comment on
attachment 71030
[details]
Patch for the scroll issue LGTM.
Andreas Kling
Comment 4
2010-10-18 08:15:17 PDT
Comment on
attachment 71031
[details]
Patch: second rendering bug (clicking a plugin) View in context:
https://bugs.webkit.org/attachment.cgi?id=71031&action=review
LGTM.
> WebCore/platform/graphics/qt/GraphicsLayerQt.cpp:864 > + return;
Nit: "break;" would fit better in this context.
Girish Ramakrishnan
Comment 5
2010-10-18 08:20:12 PDT
The scroll patch breaks youtube for me (scrolls fine but nothing renders). Patches rebased over
r69947
Girish Ramakrishnan
Comment 6
2010-10-18 08:28:54 PDT
Scrolling works after applying both patches. Can we commit them as a single patch (or split them correctly?)
Girish Ramakrishnan
Comment 7
2010-10-18 09:10:59 PDT
Err, sorry for the confusion. I had some patches before noam's patches. All good, commit in any order.
WebKit Commit Bot
Comment 8
2010-10-18 09:48:50 PDT
Comment on
attachment 71030
[details]
Patch for the scroll issue Clearing flags on attachment: 71030 Committed
r69966
: <
http://trac.webkit.org/changeset/69966
>
WebKit Commit Bot
Comment 9
2010-10-18 10:28:08 PDT
Comment on
attachment 71031
[details]
Patch: second rendering bug (clicking a plugin) Clearing flags on attachment: 71031 Committed
r69971
: <
http://trac.webkit.org/changeset/69971
>
WebKit Commit Bot
Comment 10
2010-10-18 10:28:15 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 11
2010-10-18 11:06:35 PDT
http://trac.webkit.org/changeset/69971
might have broken Qt Windows 32-bit Release
Ademar Reis
Comment 12
2010-10-21 13:34:37 PDT
Removing
bug 39121
(qtwebkit-2.1 release critical meta bug) from the list of blockers because this change won't be integrated into qtwebkit-2.1 without the other changes related to
bug 35524
, which already blocks
bug 39121
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug