2010-10-18  No'am Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Andreas Kling.

        [Qt] AC rendering bugs

        This fixes a regression that was introduced by making scrolling in accelerated compositing automatic,
        which made our explicit function to scroll the compositing layers superfluous, making the scrolling behavior
        when graphics layers are present incorrect. The fix simply removes those redundant functions.

        https://bugs.webkit.org/show_bug.cgi?id=47571

        * WebCoreSupport/PageClientQt.cpp:
        (WebCore::PageClientQGraphicsWidget::scroll):
        (WebCore::PageClientQGraphicsWidget::update):
        (WebCore::PageClientQGraphicsWidget::setRootGraphicsLayer):
        * WebCoreSupport/PageClientQt.h:

Canonical link: https://commits.webkit.org/60532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69966 268f45cc-cd09-0410-ab3c-d52691b4dbfc