WebKit/qt/WebCoreSupport/PageClientQt.cpp
@@ -118,10 +118,6 @@ PageClientQGraphicsWidget::~PageClientQGraphicsWidget()
 void PageClientQGraphicsWidget::scroll(int dx, int dy, const QRect& rectToScroll)
 {
     view->scroll(qreal(dx), qreal(dy), rectToScroll);
-
-#if USE(ACCELERATED_COMPOSITING)
-    updateCompositingScrollPosition();
-#endif
 }
 
 void PageClientQGraphicsWidget::update(const QRect& dirtyRect)
@@ -133,8 +129,6 @@ void PageClientQGraphicsWidget::update(const QRect& dirtyRect)
         overlay->update(QRectF(dirtyRect));
 #if USE(ACCELERATED_COMPOSITING)
     syncLayers();
-    // This might be a slow-scroll. We ensure that the compositing layers are in the right position.
-    updateCompositingScrollPosition();
 #endif
 }
 
@@ -185,7 +179,6 @@ void PageClientQGraphicsWidget::setRootGraphicsLayer(QGraphicsItem* layer)
         layer->setFlag(QGraphicsItem::ItemClipsChildrenToShape, true);
         layer->setParentItem(view);
         layer->setZValue(RootGraphicsLayerZValue);
-        updateCompositingScrollPosition();
     }
     createOrDeleteOverlay();
 }
@@ -197,13 +190,6 @@ void PageClientQGraphicsWidget::markForSync(bool scheduleSync)
         syncMetaMethod.invoke(view, Qt::QueuedConnection);
 }
 
-void PageClientQGraphicsWidget::updateCompositingScrollPosition()
-{
-    if (rootGraphicsLayer && page && page->mainFrame()) {
-        const QPoint scrollPosition = page->mainFrame()->scrollPosition();
-        rootGraphicsLayer.data()->setPos(-scrollPosition);
-    }
-}
 #endif
 
 #if ENABLE(TILED_BACKING_STORE)
