third_party/WebKit/WebCore/platform/graphics/qt/GraphicsLayerQt.cpp
@@ -38,6 +38,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QtGui/qgraphicseffect.h>
 #include <QtGui/qgraphicsitem.h>
 #include <QtGui/qgraphicsscene.h>
+#include <QtGui/qgraphicswidget.h>
 #include <QtGui/qpainter.h>
 #include <QtGui/qpixmap.h>
 #include <QtGui/qpixmapcache.h>
@@ -611,13 +612,13 @@ void GraphicsLayerQtImpl::flushChanges(bool recursive, bool forceUpdateTransform
     if (!m_layer || m_changeMask == NoChanges)
         goto afterLayerChanges;
 
-    if (m_currentContent.contentType == HTMLContentType && (m_changeMask & ParentChange)) {
+    if (m_changeMask & ParentChange) {
         // The WebCore compositor manages item ownership. We have to make sure graphicsview doesn't
         // try to snatch that ownership.
         if (!m_layer->parent() && !parentItem())
             setParentItem(0);
         else if (m_layer && m_layer->parent() && m_layer->parent()->nativeLayer() != parentItem())
-            setParentItem(m_layer->parent()->nativeLayer());
+            setParentItem(m_layer->parent()->platformLayer());
     }
 
     if (m_changeMask & ChildrenChange) {
@@ -681,7 +682,7 @@ void GraphicsLayerQtImpl::flushChanges(bool recursive, bool forceUpdateTransform
         if (scene())
             scene()->update();
 
-    if (m_changeMask & (ChildrenTransformChange | Preserves3DChange | TransformChange | AnchorPointChange | SizeChange | BackfaceVisibilityChange | PositionChange)) {
+    if (m_changeMask & (ChildrenTransformChange | Preserves3DChange | TransformChange | AnchorPointChange | SizeChange | BackfaceVisibilityChange | PositionChange | ParentChange)) {
         // Due to the differences between the way WebCore handles transforms and the way Qt handles transforms,
         // all these elements affect the transforms of all the descendants.
         forceUpdateTransform = true;
@@ -738,6 +739,11 @@ void GraphicsLayerQtImpl::flushChanges(bool recursive, bool forceUpdateTransform
         const QRect rect(m_layer->contentsRect());
         if (m_state.contentsRect != rect) {
             m_state.contentsRect = rect;
+            if (m_pendingContent.mediaLayer) {
+                QGraphicsWidget* widget = qobject_cast<QGraphicsWidget*>(m_pendingContent.mediaLayer.data());
+                if (widget)
+                    widget->setGeometry(rect);
+            }
             update();
         }
     }
@@ -849,6 +855,20 @@ void GraphicsLayerQt::setNeedsDisplayInRect(const FloatRect& rect)
 {
     m_impl->m_pendingContent.regionToUpdate |= QRectF(rect).toAlignedRect();
     m_impl->notifyChange(GraphicsLayerQtImpl::DisplayChange);
+}
+
+void GraphicsLayerQt::setContentsNeedsDisplay()
+{
+    switch (m_impl->m_pendingContent.contentType) {
+    case GraphicsLayerQtImpl::MediaContentType:
+        if (!m_impl->m_pendingContent.mediaLayer)
+            return;
+        m_impl->m_pendingContent.mediaLayer.data()->update();
+        break;
+    default:
+        setNeedsDisplay();
+        break;
+    }
 }
 
 /* \reimp (GraphicsLayer.h)
