third_party/WebKit/WebCore/platform/graphics/qt/GraphicsLayerQt.h
@@ -76,6 +76,7 @@ public:
     virtual void resumeAnimations();
 #endif // QT_NO_ANIMATION
     virtual void setContentsToImage(Image*);
+    virtual void setContentsNeedsDisplay();
     virtual void setContentsToMedia(PlatformLayer*);
     virtual void setContentsBackgroundColor(const Color&);
 #if ENABLE(3D_CANVAS)
